# Metrica-2.0

./: .gitignore  Procfile  README.md  conventionalcommit.json  manage.py  metrica.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt
Metrica_project/: __init__.py  asgi.py  celery.py  fake_user_script.py  income_msg_parser.py  settings.py  stats_bot.py  storage_backends.py  urls.py  views.py  wsgi.py
Metrica_project/settings/: settings_base.py  settings_dev.py  settings_prod.py
Metrica_project/templates/: base.html  metrica_index.html
docs/: openapi.yml
docs/adr/: frontend-backend-communication.md  use-frontent-build.md
fake/: fake_entities.py  generator.py  test.py
games/: admin.py  checkup.py  db_actions.py  email_script.py  filter.py  forms.py  metrica.yaml  models.py  tests.py  urls.py  utils.py  views.py
games/migrations/: 0001_initial.py  0002_gamescores_user.py  0003_auto_20210316_0030.py  0004_auto_20210316_1829.py  0005_auto_20210316_1830.py  0006_auto_20210316_1844.py  0007_games_game_cover_art.py  0008_remove_games_game_cover_art.py  0009_games_cover_art.py  0010_auto_20210401_1751.py  0011_auto_20210401_2125.py  0012_auto_20210402_1838.py  0013_auto_20210402_2247.py  (+1 more)
static/: main.js  main.js.map
staticfiles/: staticfiles.json
telegram_bot/: db_actions.py  models.py  services.py  stats_bot.py  tasks.py  urls.py  views.py
users/: admin.py  apps.py  consumers.py  custom_widgets.py  db_actions.py  fake_user_script.py  filter.py  forms.py  models.py  routing.py  signals.py  tests.py  urls.py  utils.py  views.py
(+47 files in other folders)
